Create Husky top-level. Start constraints file.
Replaced DCMs with MMCMs (except for the clock glitch ones).

--- a/fpga/hdl/makefile
+++ b/fpga/hdl/makefile
@@ -6,6 +6,12 @@ compile:
 	-Wportbind \
 	-Wselect-range \
 
+cwlite:
+	iverilog -ccmdfile_cwlite \
+	-g2005-sv \
+	-Wportbind \
+	-Wselect-range \
+
 nofifo:
 	iverilog -ccmdfile_nofifo \
 	-g2005-sv \
