Create testbench, move makefile to sim directory.

--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -3,24 +3,27 @@ all: compile run
 compile:
 	iverilog -ccmdfile \
 	-g2005-sv \
+	-I../hdl \
 	-Wportbind \
 	-Wselect-range \
 
 cwlite:
 	iverilog -ccmdfile_cwlite \
 	-g2005-sv \
+	-I../hdl \
 	-Wportbind \
 	-Wselect-range \
 
 nofifo:
 	iverilog -ccmdfile_nofifo \
 	-g2005-sv \
+	-I../hdl \
 	-Wportbind \
 	-Wselect-range \
 	-DNOFIFO \
 
 run:
-	vvp -l$(LOGFILE) a.out -$(WAVEFORMAT)
+	vvp -lsim.log a.out -fst
 
 clean:
 	rm -f a.out
