Add option to return 12-bit samples
8-bit mode also supported. Capture is the same for both cases: the full
12 bits are always recorded. The only difference is when reading the
FIFO: in 8-bit mode, every FIFO read is one full sample, and in 12-bit
mode, every FIFO read is 2/3 of a sample.

--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -1,3 +1,5 @@
+ADC_LOW_RES=0
+
 all: compile run
 
 compile:
@@ -6,6 +8,7 @@ compile:
 	-I../hdl \
 	-Wportbind \
 	-Wselect-range \
+	-P cwhusky_tb.pADC_LOW_RES=$(ADC_LOW_RES) \
 
 cwlite:
 	iverilog -ccmdfile_cwlite \
