--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -4,11 +4,12 @@ FAST_ADC=0
 NOM_ADC=0
 FIFO_SAMPLES=90
 PRESAMPLES=0
-TRIGGER_DELAY=0
+TRIGGER_DELAY=1500
 READ_DELAY=0
 LOGFILE=make.log
 WAVEFORMAT=fst
 SEED=1
+SLOP=10
 TIMEOUT_CYCLES= 50000
 DUMP=0
 
@@ -29,6 +30,7 @@ compile:
 	-P cwhusky_tb.pTRIGGER_DELAY=$(TRIGGER_DELAY) \
 	-P cwhusky_tb.pREAD_DELAY=$(READ_DELAY) \
 	-P cwhusky_tb.pTIMEOUT_CYCLES=$(TIMEOUT_CYCLES) \
+	-P cwhusky_tb.pSLOP=$(SLOP) \
 	-P cwhusky_tb.pDUMP=$(DUMP) \
 	-P cwhusky_tb.pSEED=$(SEED) \
 
