--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -6,6 +6,10 @@ FIFO_SAMPLES=90
 PRESAMPLES=0
 TRIGGER_DELAY=1500
 READ_DELAY=0
+NUM_SEGMENTS = 0
+SEGMENT_CYCLES = 0
+SEGMENT_CYCLE_COUNTER_EN = 0
+TRIGGER_NOW = 0
 LOGFILE=make.log
 WAVEFORMAT=fst
 SEED=1
@@ -29,6 +33,10 @@ compile:
 	-P cwhusky_tb.pPRESAMPLES=$(PRESAMPLES) \
 	-P cwhusky_tb.pTRIGGER_DELAY=$(TRIGGER_DELAY) \
 	-P cwhusky_tb.pREAD_DELAY=$(READ_DELAY) \
+	-P cwhusky_tb.pNUM_SEGMENTS=$(NUM_SEGMENTS) \
+	-P cwhusky_tb.pSEGMENT_CYCLES=$(SEGMENT_CYCLES) \
+	-P cwhusky_tb.pSEGMENT_CYCLE_COUNTER_EN=$(SEGMENT_CYCLE_COUNTER_EN) \
+	-P cwhusky_tb.pTRIGGER_NOW=$(TRIGGER_NOW) \
 	-P cwhusky_tb.pTIMEOUT_CYCLES=$(TIMEOUT_CYCLES) \
 	-P cwhusky_tb.pSLOP=$(SLOP) \
 	-P cwhusky_tb.pDUMP=$(DUMP) \
