Update gitignore for all the Vivado stuff

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,26 @@
 *.sw*
 a.out
 tags
+*.jou
+*.pb
+*.bat
+*.log
+*.rpt
+*.rpx
+*.xml
+*.wdf
+*.txt
+*.sh
+*.rst
+*.tcl
+*.vdi
+*.dcp
+*.js
+*SAVED*
+*.*~
+cwhusky.cache/
+cwhusky.ip_user_files/
+cwhusky.runs/
+cwhusky.hw/
+*.out
+backup/
