Streaming: add indicator that data can be read.
Goal is to have FW read only captured data, by waiting for indicator to
go high. A new register sets how many samples must be available to read
in order for the indicator to go high.

--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -11,10 +11,11 @@ SEGMENT_CYCLES = 0
 SEGMENT_CYCLE_COUNTER_EN = 0
 TRIGGER_NOW=0
 STREAM=0
+STREAM_SEGMENT_SIZE=512
 LOGFILE=make.log
 WAVEFORMAT=fst
 SEED=1
-TIMEOUT_CYCLES= 50000
+TIMEOUT_CYCLES=50000
 DUMP=0
 FIFOSIZE=REGULARFIFO
 
@@ -40,6 +41,7 @@ compile:
 	-P cwhusky_tb.pSEGMENT_CYCLE_COUNTER_EN=$(SEGMENT_CYCLE_COUNTER_EN) \
 	-P cwhusky_tb.pTRIGGER_NOW=$(TRIGGER_NOW) \
 	-P cwhusky_tb.pSTREAM=$(STREAM) \
+	-P cwhusky_tb.pSTREAM_SEGMENT_SIZE=$(STREAM_SEGMENT_SIZE) \
 	-P cwhusky_tb.pTIMEOUT_CYCLES=$(TIMEOUT_CYCLES) \
 	-P cwhusky_tb.pDUMP=$(DUMP) \
 	-P cwhusky_tb.pSEED=$(SEED) \
