Overhaul testbench sample reading and fix bugs.
- Testbench now reads at the end of the capture only (unless streaming).
- Fixed segments with presamples. Requires number of samples per segment
  to be a multiple of 3 (*not* enforced by design).
- Number of segments is now actual number of segments, not +1 (i.e.
  pNUM_SEGMENTS=0 isn't valid).
- Total number of samples stored is now a multiple of 3 (not 6).

--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -6,9 +6,10 @@ FIFO_SAMPLES=90
 PRESAMPLES=0
 TRIGGER_DELAY=1500
 READ_DELAY=100
-NUM_SEGMENTS = 0
-SEGMENT_CYCLES = 0
+NUM_SEGMENTS = 1
+SEGMENT_CYCLES = 100
 SEGMENT_CYCLE_COUNTER_EN = 0
+CAPTURE_WHILE_HIGH=0
 TRIGGER_NOW=0
 STREAM=0
 STREAM_SEGMENT_SIZE=512
@@ -39,6 +40,7 @@ compile:
 	-P cwhusky_tb.pNUM_SEGMENTS=$(NUM_SEGMENTS) \
 	-P cwhusky_tb.pSEGMENT_CYCLES=$(SEGMENT_CYCLES) \
 	-P cwhusky_tb.pSEGMENT_CYCLE_COUNTER_EN=$(SEGMENT_CYCLE_COUNTER_EN) \
+	-P cwhusky_tb.pCAPTURE_WHILE_HIGH=$(CAPTURE_WHILE_HIGH) \
 	-P cwhusky_tb.pTRIGGER_NOW=$(TRIGGER_NOW) \
 	-P cwhusky_tb.pSTREAM=$(STREAM) \
 	-P cwhusky_tb.pSTREAM_SEGMENT_SIZE=$(STREAM_SEGMENT_SIZE) \
