--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -28,6 +28,7 @@ compile:
 	-Wportbind \
 	-Wselect-range \
 	-D$(FIFOSIZE) \
+	-DXADC \
 	-P cwhusky_tb.pADC_LOW_RES=$(ADC_LOW_RES) \
 	-P cwhusky_tb.pSLOW_ADC=$(SLOW_ADC) \
 	-P cwhusky_tb.pFAST_ADC=$(FAST_ADC) \
@@ -60,6 +61,7 @@ nofifo:
 	-Wportbind \
 	-Wselect-range \
 	-DNOFIFO \
+	-DXADC \
 
 fifo:
 	iverilog \
