--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -18,6 +18,8 @@ SEED=1
 TIMEOUT_CYCLES=50000
 DUMP=0
 FIFOSIZE=REGULARFIFO
+ERRORS_OK=0
+PRESAMP_ERROR=0
 
 all: compile run
 
@@ -44,6 +46,8 @@ compile:
 	-P cwhusky_tb.pSTREAM=$(STREAM) \
 	-P cwhusky_tb.pSTREAM_SEGMENT_SIZE=$(STREAM_SEGMENT_SIZE) \
 	-P cwhusky_tb.pTIMEOUT_CYCLES=$(TIMEOUT_CYCLES) \
+	-P cwhusky_tb.pERRORS_OK=$(ERRORS_OK) \
+	-P cwhusky_tb.pPRESAMP_ERROR=$(PRESAMP_ERROR) \
 	-P cwhusky_tb.pDUMP=$(DUMP) \
 	-P cwhusky_tb.pSEED=$(SEED) \
 
