Add debugging signals to USERIO header.

--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -32,6 +32,7 @@ compile:
 	-Wselect-range \
 	-D$(FIFOSIZE) \
 	-DXADC \
+	-DUSERIO_DEBUG \
 	-P cwhusky_tb.pADC_LOW_RES=$(ADC_LOW_RES) \
 	-P cwhusky_tb.pSLOW_ADC=$(SLOW_ADC) \
 	-P cwhusky_tb.pFAST_ADC=$(FAST_ADC) \
