Change stream_segment_size to ..._threshold
(to avoid confusion; also use a sensible default setting)

--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -11,7 +11,7 @@ SEGMENT_CYCLES = 100
 SEGMENT_CYCLE_COUNTER_EN = 0
 TRIGGER_NOW=0
 STREAM=0
-STREAM_SEGMENT_SIZE=512
+STREAM_SEGMENT_THRESHOLD=512
 LOGFILE=make.log
 WAVEFORMAT=fst
 SEED=1
@@ -47,7 +47,7 @@ compile:
 	-P cwhusky_tb.pSEGMENT_CYCLE_COUNTER_EN=$(SEGMENT_CYCLE_COUNTER_EN) \
 	-P cwhusky_tb.pTRIGGER_NOW=$(TRIGGER_NOW) \
 	-P cwhusky_tb.pSTREAM=$(STREAM) \
-	-P cwhusky_tb.pSTREAM_SEGMENT_SIZE=$(STREAM_SEGMENT_SIZE) \
+	-P cwhusky_tb.pSTREAM_SEGMENT_THRESHOLD=$(STREAM_SEGMENT_THRESHOLD) \
 	-P cwhusky_tb.pTIMEOUT_CYCLES=$(TIMEOUT_CYCLES) \
 	-P cwhusky_tb.pERRORS_OK=$(ERRORS_OK) \
 	-P cwhusky_tb.pPRESAMP_ERROR=$(PRESAMP_ERROR) \
