--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -34,6 +34,7 @@ compile:
 	-D$(FIFOSIZE) \
 	-DXADC \
 	-DUSERIO_DEBUG \
+	-DGLITCH_OBSERVER \
 	-P cwhusky_tb.pADC_LOW_RES=$(ADC_LOW_RES) \
 	-P cwhusky_tb.pSLOW_ADC=$(SLOW_ADC) \
 	-P cwhusky_tb.pFAST_ADC=$(FAST_ADC) \
@@ -71,6 +72,7 @@ nofifo:
 	-Wselect-range \
 	-DNOFIFO \
 	-DXADC \
+	-DGLITCH_OBSERVER \
 
 lint:
 	verilator --lint-only -Wall \
@@ -80,6 +82,7 @@ lint:
 	-DNOFIFO \
 	-DXADC_EN \
 	-DUSERIO_DEBUG \
+	-DGLITCH_OBSERVER \
 	--top-module cwhusky_top \
 	2>&1 | tee lint.out \
 
