Verify different offset values.
Also fix related Verilog bugs.

--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -4,6 +4,9 @@ FAST_ADC=0
 NOM_ADC=0
 FIFO_SAMPLES=90
 PRESAMPLES=0
+OFFSET_ENABLE = 0
+OFFSET_MIN = 0
+OFFSET_MAX = 1000
 TRIGGER_DELAY=1500
 READ_DELAY=100
 NUM_SEGMENTS = 1
@@ -39,6 +42,9 @@ compile:
 	-P cwhusky_tb.pNOM_ADC=$(NOM_ADC) \
 	-P cwhusky_tb.pFIFO_SAMPLES=$(FIFO_SAMPLES) \
 	-P cwhusky_tb.pPRESAMPLES=$(PRESAMPLES) \
+	-P cwhusky_tb.pOFFSET_ENABLE=$(OFFSET_ENABLE) \
+	-P cwhusky_tb.pOFFSET_MIN=$(OFFSET_MIN) \
+	-P cwhusky_tb.pOFFSET_MAX=$(OFFSET_MAX) \
 	-P cwhusky_tb.pTRIGGER_DELAY=$(TRIGGER_DELAY) \
 	-P cwhusky_tb.pREAD_DELAY=$(READ_DELAY) \
 	-P cwhusky_tb.pNUM_SEGMENTS=$(NUM_SEGMENTS) \
