Testbench: randomize length of external trigger.

--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -7,6 +7,7 @@ PRESAMPLES=0
 OFFSET_ENABLE = 0
 OFFSET_MIN = 0
 OFFSET_MAX = 1000
+SHORT_TRIGGER = 0
 TRIGGER_DELAY=1500
 READ_DELAY=100
 NUM_SEGMENTS = 1
@@ -48,6 +49,7 @@ compile:
 	-P cwhusky_tb.pTRIGGER_DELAY=$(TRIGGER_DELAY) \
 	-P cwhusky_tb.pREAD_DELAY=$(READ_DELAY) \
 	-P cwhusky_tb.pNUM_SEGMENTS=$(NUM_SEGMENTS) \
+	-P cwhusky_tb.pSHORT_TRIGGER=$(SHORT_TRIGGER) \
 	-P cwhusky_tb.pSEGMENT_CYCLES=$(SEGMENT_CYCLES) \
 	-P cwhusky_tb.pSEGMENT_CYCLE_COUNTER_EN=$(SEGMENT_CYCLE_COUNTER_EN) \
 	-P cwhusky_tb.pTRIGGER_NOW=$(TRIGGER_NOW) \
