SAD trigger: check for FIFO errors.

--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -39,6 +39,7 @@ compile_sad:
 	iverilog ../hdl/sad.v \
 	../hdl/sad_wrapper.v \
 	../hdl/usb_reg_main.v \
+	../hdl/cdc_pulse.v \
 	sad_tb.v \
 	vivado/sad_fifo_sim_netlist.v \
 	-y/tools/Xilinx/Vivado/2020.2/ids_lite/ISE/verilog/src/unisims/ \
@@ -59,6 +60,7 @@ sad_nofifo:
 	iverilog ../hdl/sad.v \
 	../hdl/sad_wrapper.v \
 	../hdl/usb_reg_main.v \
+	../hdl/cdc_pulse.v \
 	sad_tb.v \
 	-g2005-sv \
 	-DNOFIFO \
