SAD triggering: speed-optimized version.
Meets timing at 200 MHz!
This implementation is 32 deep x 8 bits wide. Verified in simulation and
on FPGA. Uses distributed RAM for 32 small FIFOs (one for each counter).
64x8 implementation was succesful but bitfile behaved strangely:
couldn't communicate with target and scope.XADC reported numbers that
don't make sense (power draw too high?).

--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -36,7 +36,8 @@ all: compile run
 all_sad: compile_sad run
 
 compile_sad:
-	iverilog ../hdl/sad.v \
+	iverilog \
+	../hdl/sad.v \
 	../hdl/sad_wrapper.v \
 	../hdl/usb_reg_main.v \
 	../hdl/cdc_pulse.v \
@@ -57,7 +58,8 @@ compile_sad:
 	-o $(EXEFILE) \
 
 sad_nofifo:
-	iverilog ../hdl/sad.v \
+	iverilog \
+	../hdl/sad.v \
 	../hdl/sad_wrapper.v \
 	../hdl/usb_reg_main.v \
 	../hdl/cdc_pulse.v \
