New glitch feature: multiple glitches.
Instead of a single offset/repeat setting, you can now specify up to 32
offset/repeats.

--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -11,6 +11,9 @@ SHORT_TRIGGER = 0
 TRIGGER_DELAY=1500
 READ_DELAY=100
 NUM_SEGMENTS = 1
+NUM_GLITCHES = 0
+MAX_GLITCH_REPEATS = 0
+MAX_GLITCH_OFFSET = 0
 SEGMENT_CYCLES = 100
 SEGMENT_CYCLE_COUNTER_EN = 0
 TRIGGER_NOW=0
@@ -105,6 +108,9 @@ compile:
 	-P cwhusky_tb.pTRIGGER_DELAY=$(TRIGGER_DELAY) \
 	-P cwhusky_tb.pREAD_DELAY=$(READ_DELAY) \
 	-P cwhusky_tb.pNUM_SEGMENTS=$(NUM_SEGMENTS) \
+	-P cwhusky_tb.pNUM_GLITCHES=$(NUM_GLITCHES) \
+	-P cwhusky_tb.pMAX_GLITCH_OFFSET=$(MAX_GLITCH_OFFSET) \
+	-P cwhusky_tb.pMAX_GLITCH_REPEATS=$(MAX_GLITCH_REPEATS) \
 	-P cwhusky_tb.pSHORT_TRIGGER=$(SHORT_TRIGGER) \
 	-P cwhusky_tb.pSEGMENT_CYCLES=$(SEGMENT_CYCLES) \
 	-P cwhusky_tb.pSEGMENT_CYCLE_COUNTER_EN=$(SEGMENT_CYCLE_COUNTER_EN) \
