Add DDR R/W test module.
Needed to disable LA to make Vivado happy with all our clocks. (There's
surely a way to fix this without nixing the LA, but for the purposes of
this experimental development, it's not worth the effort.)

--- a/fpga/vivado/cw310/makefile
+++ b/fpga/vivado/cw310/makefile
@@ -50,6 +50,7 @@ compile:
 	-Wselect-range \
 	-DNOMIG \
 	-DCW310 \
+	-DPRO \
 	-DNOFIFO \
 	-DTRACE \
 
@@ -77,9 +78,10 @@ lint:
 	-D__ICARUS__ \
 	-DNOMIG \
 	-DCW310 \
+	-DPRO \
 	-DNOFIFO \
 	-DTRACE \
-	--top-module cw310_wrapper \
+	--top-module cwhusky_cw310_top \
 	2>&1 | tee lint.out \
 
 clean:
