--- a/fpga/vivado/cw310/makefile
+++ b/fpga/vivado/cw310/makefile
@@ -39,7 +39,7 @@ FLUSH=0
 THRESHOLD=0
 VERBOSE=0
 DDR_TEST=0
-DDR_TEST_LOOPS=2
+DDR_TEST_LOOPS=1
 
 all: compile run
 
@@ -71,6 +71,31 @@ compile:
 	-DCW310 \
 	-DPRO \
 	-DTRACE \
+	-P cwhusky_tb.pADC_LOW_RES=$(ADC_LOW_RES) \
+	-P cwhusky_tb.pSLOW_ADC=$(SLOW_ADC) \
+	-P cwhusky_tb.pFAST_ADC=$(FAST_ADC) \
+	-P cwhusky_tb.pNOM_ADC=$(NOM_ADC) \
+	-P cwhusky_tb.pFIFO_SAMPLES=$(FIFO_SAMPLES) \
+	-P cwhusky_tb.pPRESAMPLES=$(PRESAMPLES) \
+	-P cwhusky_tb.pOFFSET_ENABLE=$(OFFSET_ENABLE) \
+	-P cwhusky_tb.pOFFSET_MIN=$(OFFSET_MIN) \
+	-P cwhusky_tb.pOFFSET_MAX=$(OFFSET_MAX) \
+	-P cwhusky_tb.pTRIGGER_DELAY=$(TRIGGER_DELAY) \
+	-P cwhusky_tb.pREAD_DELAY=$(READ_DELAY) \
+	-P cwhusky_tb.pNUM_SEGMENTS=$(NUM_SEGMENTS) \
+	-P cwhusky_tb.pNUM_GLITCHES=$(NUM_GLITCHES) \
+	-P cwhusky_tb.pMAX_GLITCH_OFFSET=$(MAX_GLITCH_OFFSET) \
+	-P cwhusky_tb.pMAX_GLITCH_REPEATS=$(MAX_GLITCH_REPEATS) \
+	-P cwhusky_tb.pSHORT_TRIGGER=$(SHORT_TRIGGER) \
+	-P cwhusky_tb.pSEGMENT_CYCLES=$(SEGMENT_CYCLES) \
+	-P cwhusky_tb.pSEGMENT_CYCLE_COUNTER_EN=$(SEGMENT_CYCLE_COUNTER_EN) \
+	-P cwhusky_tb.pTRIGGER_NOW=$(TRIGGER_NOW) \
+	-P cwhusky_tb.pSTREAM=$(STREAM) \
+	-P cwhusky_tb.pSTREAM_SEGMENT_THRESHOLD=$(STREAM_SEGMENT_THRESHOLD) \
+	-P cwhusky_tb.pTIMEOUT_CYCLES=$(TIMEOUT_CYCLES) \
+	-P cwhusky_tb.pERRORS_OK=$(ERRORS_OK) \
+	-P cwhusky_tb.pPRESAMP_ERROR=$(PRESAMP_ERROR) \
+	-P cwhusky_tb.pDOWNSAMPLE=$(DOWNSAMPLE) \
 	-P cwhusky_tb.pDUMP=$(DUMP) \
 	-P cwhusky_tb.pSEED=$(SEED) \
 	-P cwhusky_tb.pDDR_TEST=$(DDR_TEST) \
