Bypass DDR fix.
Can now use full FIFO space.

--- a/fpga/vivado/cw310/makefile
+++ b/fpga/vivado/cw310/makefile
@@ -70,6 +70,7 @@ compile:
 	-DCW310 \
 	-DPRO \
 	-DTRACE \
+	-D$(FIFOSIZE) \
 	-P cwhusky_tb.pADC_LOW_RES=$(ADC_LOW_RES) \
 	-P cwhusky_tb.pSLOW_ADC=$(SLOW_ADC) \
 	-P cwhusky_tb.pFAST_ADC=$(FAST_ADC) \
