build up cocotb regression

--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -39,7 +39,12 @@ FLUSH=0
 THRESHOLD=0
 VERBOSE=0
 COCOTB_DEBUG_LEVEL=INFO
-NUMCAP=3
+NUM_CAPTURES=3
+LA_CAPTURE=1
+TRACE_CAPTURE=1
+ADC_CAPTURE=1
+MIN_SIZE=30
+MAX_SIZE=100
 
 all: compile run
 all_sad: compile_sad run
@@ -223,7 +228,12 @@ run_coco:
 	COCOTB_RESOLVE_X=RANDOM \
 	TOPLEVEL=cwhusky_cw310_cocowrapper \
 	TOPLEVEL_LANG=verilog \
-	NUMCAP=$(NUMCAP) \
+	NUM_CAPTURES=$(NUM_CAPTURES) \
+	LA_CAPTURE=$(LA_CAPTURE) \
+	TRACE_CAPTURE=$(TRACE_CAPTURE) \
+	ADC_CAPTURE=$(ADC_CAPTURE) \
+	MIN_SIZE=$(MIN_SIZE) \
+	MAX_SIZE=$(MAX_SIZE) \
 	MODULE=test_husky \
 	COCOTB_DEBUG_LEVEL=$(COCOTB_DEBUG_LEVEL) \
 	LIBPYTHON_LOC=$(shell cocotb-config --libpython) \
