Use my FIFOs instead of Xilinx's for simulation.
By defining NOXILINXFIFO. Implementation still using Xilinx FIFOs (for
now). Unexpected benefit is that simulation is *much* faster.

--- a/fpga/vivado/cw310/makefile
+++ b/fpga/vivado/cw310/makefile
@@ -117,7 +117,7 @@ lint:
 	-DNOMIG \
 	-DCW310 \
 	-DPRO \
-	-DNOFIFO \
+	-DNOXILINXFIFO \
 	-DTRACE \
 	-DLINT \
 	--top-module cwhusky_cw310_top \
