Cocotb: test captures > than the FIFOs.

--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -26,6 +26,7 @@ SEED=1
 TIMEOUT_CYCLES=50000
 DUMP=0
 FIFOSIZE=REGULARFIFO
+DDR_MODEL_WRITES=REGULAR_DDR_WRITES
 FAST_FIFO_SIM=NOFASTFIFO
 ERRORS_OK=0
 PRESAMP_ERROR=0
@@ -175,6 +176,7 @@ compile_coco:
 	-Wportbind \
 	-Wselect-range \
 	-D$(FIFOSIZE) \
+	-D$(DDR_MODEL_WRITES) \
 	-DTRACE \
 	-DNOMIG \
 	-DCW310 \
