Cocotb: start of glitch testing (WIP).

--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -45,6 +45,7 @@ NUM_CAPTURES=3
 LA_CAPTURE=1
 TRACE_CAPTURE=1
 ADC_CAPTURE=1
+GLITCH_CAPTURE=0
 MIN_SIZE=30
 MAX_SIZE=100
 NO_DOWNSTREAM_TRIGGERS=0
@@ -245,6 +246,7 @@ run_coco:
 	LA_CAPTURE=$(LA_CAPTURE) \
 	TRACE_CAPTURE=$(TRACE_CAPTURE) \
 	ADC_CAPTURE=$(ADC_CAPTURE) \
+	GLITCH_CAPTURE=$(GLITCH_CAPTURE) \
 	MIN_SIZE=$(MIN_SIZE) \
 	MAX_SIZE=$(MAX_SIZE) \
 	NO_DOWNSTREAM_TRIGGERS=$(NO_DOWNSTREAM_TRIGGERS) \
